# psn-receipts

./: .gitignore  LICENSE  README.md  pyproject.toml
psn_receipts/: auth.py  cli.py  config.py  fetch.py  parse.py
tests/: test_psn_export.py
